--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+{% extends "base.html"%}
+    {% block content %}    
         <a href="{% url 'leads:lead-list' %}">Go back to leads</a>
         <hr />
         <h1>Create a new lead</h1>
@@ -17,5 +8,5 @@
             {{ form.as_p }}
             <button type="submit">Submit</button>
         </form>
-    </body>
-</html>
+    {% endblock content%}
+
