--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <style>
-            .lead {
-                padding-top: 10px;
-                padding-bottom:10px;
-            }
-        </style>
-    </head>
-    <body>
+{% extends "base.html"%}
+    {% block content %}    
         <a href="{% url 'leads:lead-list' %}">Go back to leads</a>
         <hr />
         <h1>This is the detail of {{ lead.first_name}}</h1>
@@ -23,5 +8,5 @@
         <hr />
         <a href="{% url 'leads:lead-update' lead.pk %}">Update</a>
         <a href="{% url 'leads:lead-delete' lead.pk %}">Delete</a>
-    </body>
-</html>
+    {% endblock content%}
+
