--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>KubaCRM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>KubaCRM</title>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
