--- a/agents/templates/agents/agent_detail.html
+++ b/agents/templates/agents/agent_detail.html
@@ -4,9 +4,9 @@
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
       <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
-        <h2 class="text-sm title-font text-gray-500 tracking-widest">Agent</h2>
+        <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">
-          {{agent.user.username}}
+          {{lead.first_name}} {{lead.last_name}}
         </h1>
         <div class="flex mb-4">
           <a
@@ -17,7 +17,7 @@
             >Reviews</a
           >
           <a
-            href="#"
+            href="{% url 'agents:agent-update' agent.pk %}"
             class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
             >Update Details</a
           >
