--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,11 +24,16 @@
     <nav
       class="md:ml-auto flex flex-wrap items-center text-base justify-center"
     >
+      {% if not request.user.is_authenticated %}
+      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign up</a>
+      {% else %} {% if request.user.is_organisor %}
+      <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900"
+        >Agents</a
+      >
+      {% endif %}
       <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900"
         >Leads</a
       >
-      {% if not request.user.is_authenticated %}
-      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign up</a>
       {% endif %}
     </nav>
     {% if request.user.is_authenticated %}Logged in as:
