--- a/leads/templates/leads/lead_category_update.html
+++ b/leads/templates/leads/lead_category_update.html
@@ -14,12 +14,13 @@
             class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
             >Overview</a
           >
-          <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
+          <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">
              Category
           </a>
+          
           <a
             href="{% url 'leads:lead-update' lead.pk %}"
-            class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1"
+            class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
             >Update Details</a
           >
         </div>
