--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -14,42 +14,56 @@
           <a
             href="{% url 'leads:lead-detail' lead.pk %}"
             class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">
-              Overview
+              Opis
           </a>
-          <a 
+          {% comment %} <a 
             href="{% url 'leads:lead-category-update' lead.pk %}"
             class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
-              Category
-          </a>
+              Kategoria - TODO
+          </a> {% endcomment %}
           <a
             href="{% url 'leads:lead-update' lead.pk %}"
             class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
-            >Update Details</a
+            >Zaktualizuj dane - TODO</a
           >
         </div>
-        <p class="leading-relaxed mb-4">
-          Fam locavore kickstarter distillery. Mixtape chillwave tumeric
-          sriracha taximy chia microdosing tilde DIY. XOXO fam inxigo juiceramps
-          cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine
-          tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean.
-        </p>
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Lead origin</span>
+          <span class="ml-auto text-gray-900">{{lead.lead_origin}}</span>
+        </div>
         <div class="flex border-t border-gray-200 py-2">
           <span class="text-gray-500">Age</span>
           <span class="ml-auto text-gray-900">{{lead.age}}</span>
         </div>
         <div class="flex border-t border-gray-200 py-2">
           <span class="text-gray-500">Location</span>
-          <span class="ml-auto text-gray-900">Dummy location</span>
+          <span class="ml-auto text-gray-900">{{lead.address}}</span>
         </div>
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Email</span>
+          <span class="ml-auto text-gray-900">{{lead.email}}</span>
+        </div>
+        {% if lead.do_not_email == True %}
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Do not Email</span>
+          <span class="ml-auto text-gray-900">{{lead.do_not_email}}</span>
+        </div>
+        {% endif %}
         <div class="flex border-t border-b mb-6 border-gray-200 py-2">
           <span class="text-gray-500">Cell phone</span>
-          <span class="ml-auto text-gray-900">+48733277112</span>
+          <span class="ml-auto text-gray-900">{{lead.phone_number}}</span>
         </div>
+        {% if lead.do_not_call == True %}
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Do not call</span>
+          <span class="ml-auto text-gray-900">{{lead.do_not_call}}</span>
+        </div>
+        {% endif %}
         <div class="flex">
           <button
             class="flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded"
           >
-            Button
+            Wyślij wiadomość - TODO
           </button>
           <button
             class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex items-center justify-center text-gray-500 ml-4"
@@ -72,7 +86,7 @@
       <img
         alt="ecommerce"
         class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded"
-        src="https://dummyimage.com/400x400"
+        src="/static/images/Boss_baby.png"
       />
     </div>
   </div>
