--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,29 +3,31 @@
   <div
     class="container mx-auto flex px-5 py-24 items-center justify-center flex-col"
   >
-    <img
+    {% comment %} <img
       class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded"
       alt="hero"
       src="https://dummyimage.com/720x600"
-    />
+    /> {% endcomment %}
     <div class="text-center lg:w-2/3 w-full">
       <h1
         class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"
       >
-        CRM built with Django
+        Zarządzaj swoimi kontaktami z nami
       </h1>
-      <p class="mb-8 leading-relaxed">This CRM helps you manage your leads</p>
+      <p class="mb-8 leading-relaxed">Dołącz już teraz</p>
       <div class="flex justify-center">
-        <button
+        <a
+          href="{% url 'signup' %}"
           class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"
         >
-          Button
-        </button>
-        <button
+          Dołącz
+        </a>
+        <a
+          href="{% url 'login' %}"
           class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"
         >
-          Button
-        </button>
+          Zaloguj się
+        </a>
       </div>
     </div>
   </div>
