--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,30 +19,30 @@
           d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
         ></path>
       </svg>
-      <span class="ml-3 text-xl">Kuba CRM</span>
+      <span class="ml-3 text-xl">System wspomagający zarządzanie relacjami z klientami</span>
     </a>
     <nav
       class="md:ml-auto flex flex-wrap items-center text-base justify-center"
     >
       {% if not request.user.is_authenticated %}
-      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign up</a>
+      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Dołącz</a>
       {% else %} {% if request.user.is_organisor %}
       <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900"
-        >Agents</a
+        >Agenci</a
       >
       {% endif %}
       <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900"
-        >Leads</a
+        >Kontakty</a
       >
       {% endif %}
     </nav>
-    {% if request.user.is_authenticated %}Logged in as:
+    {% if request.user.is_authenticated %}Zalogowano jako:
     {{request.user.username}}
     <a
       href="{% url 'logout' %}"
       class="ml-3 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
     >
-      Logout
+      Wyloguj się
       <svg
         fill="none"
         stroke="currentColor"
@@ -60,7 +60,7 @@
       href="{% url 'login' %}"
       class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
     >
-      Login
+      Zaloguj się
       <svg
         fill="none"
         stroke="currentColor"
