--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -1,9 +1,13 @@
-{% extends "base.html"%} {% block content %}
+{% extends "base.html"%} 
+
+{% load tailwind_filters %}
+
+{% block content %}
 
 <section class="text-gray-600 body-font overflow-hidden">
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0 mx-auto"> <!-- Added mx-auto class for horizontal centering -->
         <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">
           {{lead.first_name}} {{lead.last_name}}
@@ -14,17 +18,15 @@
             class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
             >Overview</a
           >
-          <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
-             Category
-          </a>
           <a
             href="{% url 'leads:lead-update' lead.pk %}"
             class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1"
             >Update Details</a
           >
         </div>
-        <form method="post">
-          {% csrf_token %} {{ form.as_p }}
+        <form method="post" class="mx-auto">
+          {% csrf_token %} 
+          {{ form|crispy }}
           <button type="submit">Submit</button>
         </form>
         <a
@@ -34,11 +36,6 @@
           Delete
         </a>
       </div>
-      <img
-        alt="ecommerce"
-        class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded"
-        src="https://dummyimage.com/400x400"
-      />
     </div>
   </div>
 </section>
