profile picture update

--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -8,18 +8,18 @@
         <h1 class="text-4xl text-gray-800">Leads</h1>
         <a class="text-gray-500 hover:text-blue-500" href="{% url 'leads:category-list' %}">View categories</a>
       </div>
-      {% if request.user.is_organisor %}
+      {% comment %} {% if request.user.is_organisor %}
       <div>
         <a class="text-gray-500 hover:text-blue-500" href="{% url 'leads:lead-create' %}">Create a new lead</a>
       </div>
-      {% endif %}
+      {% endif %} {% endcomment %}
     </div>
     <!-- Filter by Category -->
     <div class="mb-4">
         <form method="get" class="flex items-center">
             <label for="categoryFilter" class="text-gray-600">Filter by Category:</label>
             <select id="categoryFilter" name="category" class="border p-2">
-                <option value="">All Categories</option>
+                <option value="">All</option>
                 {% for category in categories %}
                     <option value="{{ category.name }}">{{ category.name }}</option>
                 {% endfor %}
