--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
     <a
       class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
     >
-      <svg
+      {% comment %} <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         stroke="currentColor"
@@ -18,7 +18,7 @@
         <path
           d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
         ></path>
-      </svg>
+      </svg> {% endcomment %}
       <span class="ml-3 text-xl">System wspomagający zarządzanie relacjami z klientami</span>
     </a>
     <nav
