--- a/agents/templates/agents/agent_update.html
+++ b/agents/templates/agents/agent_update.html
@@ -1,12 +1,16 @@
-{% extends "base.html"%} {% block content %}
+{% extends "base.html"%} 
+{% load static %}
+{% load tailwind_filters %}
+
+ {% block content %}
 
 <section class="text-gray-600 body-font overflow-hidden">
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
       <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
-        <h2 class="text-sm title-font text-gray-500 tracking-widest">Agent</h2>
+        <h2 class="text-sm title-font text-gray-500 tracking-widest">AGENT</h2>
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">
-          {{agent.user.username}}
+          {{agent.user.first_name}} {{agent.user.last_name}}
         </h1>
         <div class="flex mb-4">
           <a
@@ -14,9 +18,11 @@
             class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
             >Overview</a
           >
-          <a class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1"
-            >Reviews</a
-          >
+          <a 
+            href="{% url 'agents:agent-statistics' agent.pk %}" 
+            class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
+            Statistics
+          </a>
           <a
             href="{% url 'agents:agent-update' agent.pk %}"
             class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1"
@@ -24,7 +30,7 @@
           >
         </div>
         <form method="post">
-          {% csrf_token %} {{ form.as_p }}
+          {% csrf_token %} {{ form|crispy }}
           <button type="submit">Submit</button>
         </form>
         <a
@@ -35,9 +41,9 @@
         </a>
       </div>
       <img
-        alt="ecommerce"
-        class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded"
-        src="https://dummyimage.com/400x400"
+          alt="ecommerce"
+          class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded"
+          src="{% if agent.user.userprofile.profile_picture %}{{ agent.user.userprofile.profile_picture.url }}{% else %}{% static 'Boss_baby.jpg' %}{% endif %}"
       />
     </div>
   </div>
