--- a/agents/templates/agents/agent_list.html
+++ b/agents/templates/agents/agent_list.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %} {% block content %}
 
 <section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto flex flex-wrap">
-    <div
-      class="w-full mb-6 py-6 flex justify-between items-center border-b border-gray-200"
-    >
+  <div class="container px-5 py-24 mx-auto">
+    <div class="flex justify-between items-center border-b border-gray-200 mb-6 py-6">
+
       <div>
         <h1 class="text-4xl text-gray-800">Agents</h1>
       </div>
@@ -23,29 +22,24 @@
         <div
           class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col"
         >
-          <div
-            class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 flex-shrink-0"
-          >
-            <svg
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-8 h-8"
-              viewBox="0 0 24 24"
-            >
-              <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-            </svg>
+          <div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 flex-shrink-0">
+              {% if agent.user.userprofile.profile_picture %}
+                  <img src="{{ agent.user.userprofile.profile_picture.url }}" alt="Profile Picture" class="w-full h-full object-cover rounded-full">
+              {% else %}
+                  <!-- Provide a fallback image or default styling if no profile picture is available -->
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-8 h-8 text-gray-300" viewBox="0 0 24 24">
+                      <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+                  </svg>
+              {% endif %}
           </div>
           <div class="flex-grow">
             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
               {{agent.user.username}}
             </h2>
-            <p class="leading-relaxed text-base">
-              Blue bottle crucifix vinyl post-ironic four dollar toast vegan
-              taxidermy. Gastropub indxgo juice poutine.
-            </p>
+                      
+            <p class="leading-relaxed text-base">{{agent.user.first_name}} {{agent.user.last_name|default:"N/A"}}</p>
+
+            <p class="leading-relaxed text-base">Email: {{ agent.user.email|default:"N/A" }}</p>
             <a
               href="{% url 'agents:agent-detail' agent.pk %}"
               class="mt-3 text-indigo-500 inline-flex items-center"
