--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <section class="text-gray-600 body-font overflow-hidden">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+  <div class="container px-2 py-24 mx-auto">
+    <div class="mx-auto flex flex-wrap">
+      <div class="lg:w-4/5 w-full lg:pr-5 mb-5 lg:mb-0 mx-auto">
         <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">
           {{ lead.first_name }} {{ lead.last_name }}
@@ -75,7 +75,7 @@
           <span class="ml-auto text-gray-900">{{lead.do_not_call}}</span>
         </div>
         {% endif %}
-        <div class="flex">
+        {% comment %} <div class="flex">
           <button
             class="flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded"
           >
@@ -97,13 +97,8 @@
               ></path>
             </svg>
           </button>
-        </div>
+        </div> {% endcomment %}
       </div>
-      <img
-        alt="ecommerce"
-        class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded"
-        src="/static/images/Boss_baby.png"
-      />
     </div>
   </div>
 </section>
