--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -5,9 +5,9 @@
 {% block content %}
 
 <section class="text-gray-600 body-font overflow-hidden">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0 mx-auto"> <!-- Added mx-auto class for horizontal centering -->
+  <div class="container px-2 py-24 mx-auto">
+    <div class="mx-auto flex flex-wrap">
+      <div class="lg:w-4/5 w-full lg:pr-5 mb-5 lg:mb-0 mx-auto">
         <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">
           {{lead.first_name}} {{lead.last_name}}
