--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,54 +25,68 @@
       class="md:ml-auto flex flex-wrap items-center text-base justify-center"
     >
       {% if not request.user.is_authenticated %}
-      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Dołącz</a>
+      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Join</a>
       {% else %} {% if request.user.is_organisor %}
       <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900"
-        >Agenci</a
+        >Agents</a
       >
       {% endif %}
       <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900"
-        >Kontakty</a
-      >
+        >Contacts
+      </a>
+      {% comment %} <a href="{% url 'agents:agent-detail' agent.pk %}" class="mr-5 hover:text-gray-900"
+        >My profile</a> {% endcomment %}
+      {% if request.user.is_agent %}
+      <a href="{% url 'agents:agent-detail' request.user.agent.pk %}" class=" hover:text-gray-900">
+        {{request.user.username}}
+      </a>
+      {% if request.user.userprofile.profile_picture %}
+          <img src="{{ request.user.userprofile.profile_picture.url }}" alt="Profile" class="mr-4 w-10 h-10 ml-2 rounded-full">
+      {% endif %}
+      {% endif %}
       {% endif %}
     </nav>
-    {% if request.user.is_authenticated %}Zalogowano jako:
-    {{request.user.username}}
-    <a
-      href="{% url 'logout' %}"
-      class="ml-3 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
-    >
-      Wyloguj się
-      <svg
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        class="w-4 h-4 ml-1"
-        viewBox="0 0 24 24"
-      >
-        <path d="M5 12h14M12 5l7 7-7 7"></path>
-      </svg>
-    </a>
+    {% if request.user.is_authenticated %}
+      {% comment %} Logged as: {{request.user.username}} {% endcomment %}
+      <form method="post" action="{% url 'logout' %}" class="ml-3 inline-flex items-center">
+        {% csrf_token %}
+        <input type="hidden" name="next" value="{% url 'landing-page' %}">
+        <button
+          type="submit"
+          class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
+        >
+          Log out
+          <svg
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            class="w-4 h-4 ml-1"
+            viewBox="0 0 24 24"
+          >
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+        </button>
+      </form>
     {% else %}
-    <a
-      href="{% url 'login' %}"
-      class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
-    >
-      Zaloguj się
-      <svg
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        class="w-4 h-4 ml-1"
-        viewBox="0 0 24 24"
+      <a
+        href="{% url 'login' %}"
+        class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
       >
-        <path d="M5 12h14M12 5l7 7-7 7"></path>
-      </svg>
-    </a>
+        Log in
+        <svg
+          fill="none"
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          class="w-4 h-4 ml-1"
+          viewBox="0 0 24 24"
+        >
+          <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+      </a>
     {% endif %}
   </div>
 </header>
