lead list changes and detail fixes

--- a/agents/templates/agents/agent_detail.html
+++ b/agents/templates/agents/agent_detail.html
@@ -56,7 +56,7 @@
       <img
           alt="ecommerce"
           class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded"
-          src="{% if agent.user.userprofile.profile_picture %}{{ agent.user.userprofile.profile_picture.url }}{% else %}{% static 'Boss_baby.jpg' %}{% endif %}"
+          src="{% if agent.user.userprofile.profile_picture %}{{ agent.user.userprofile.profile_picture.url }}{% else %}{% static 'images/Boss_baby.png' %}{% endif %}"
       />
     </div>
   </div>
