--- a/templates/landing.html
+++ b/templates/landing.html
@@ -12,21 +12,21 @@
       <h1
         class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"
       >
-        Zarządzaj swoimi kontaktami z nami
+        Grow your buisness with KubaCRM
       </h1>
-      <p class="mb-8 leading-relaxed">Dołącz już teraz</p>
+      <p class="mb-8 leading-relaxed">Join right now</p>
       <div class="flex justify-center">
         <a
           href="{% url 'signup' %}"
           class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"
         >
-          Dołącz
+          Sign up
         </a>
         <a
           href="{% url 'login' %}"
           class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"
         >
-          Zaloguj się
+          Log in
         </a>
       </div>
     </div>
