--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h1>Password reset complete</h1>
-    <p>You have successfully reset your password. Click <a href="{% url 'login' %}">here</a> to login</p>
+    <p>You have successfully reset your password. To login click <strong><a href="{% url 'login' %}">here</a><strong/></p>
+        
 
 {% endblock content %}
