--- a/leads/templates/leads/category_list.html
+++ b/leads/templates/leads/category_list.html
@@ -21,7 +21,7 @@
             <form method="post" action="{% url 'leads:add-category' %}">
               {% csrf_token %}
               <label for="newCategory" class="text-gray-600">Category Name:</label>
-              <input type="text" id="newCategory" name="name" class="border p-2"> <!-- Ensure the 'name' attribute is set correctly -->
+              <input type="text" id="newCategory" name="name" class="border p-2">
               <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Add Category</button>
             </form>
           </td>
