--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,34 +5,20 @@
     <a
       class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
     >
-      {% comment %} <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-        viewBox="0 0 24 24"
-      >
-        <path
-          d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
-        ></path>
-      </svg> {% endcomment %}
-      <span class="ml-3 text-xl">System wspomagający zarządzanie relacjami z klientami</span>
+      <span class="ml-3 text-xl">KubaCRM</span>
     </a>
     <nav
       class="md:ml-auto flex flex-wrap items-center text-base justify-center"
     >
       {% if not request.user.is_authenticated %}
-      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Join</a>
+      <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign up</a>
       {% else %} {% if request.user.is_organisor %}
       <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900"
         >Agents</a
       >
       {% endif %}
       <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900"
-        >Contacts
+        >Leads
       </a>
       {% comment %} <a href="{% url 'agents:agent-detail' agent.pk %}" class="mr-5 hover:text-gray-900"
         >My profile</a> {% endcomment %}
